# InterviewerAI

./: .gitignore  README.md  pyproject.toml
modules/: AI_Stuff.py  ExtractMyText.py  GetTemplates.py  Handle_collections.py  Interviewer_bot.py  Make_content_ai.py  llm_stack.py  pannel_bot.py
modules/chroma_collections/: chroma.sqlite3
